--- a/1080i/DialogVolumeBar.org
+++ b/1080i/DialogVolumeBar.org
@@ -2,7 +2,7 @@
     <controls>
         <control type="group">
             <posx>1745</posx>
-            <posy>20</posy>
+            <posy>24</posy>
             <animation type="WindowOpen" reversible="false">
                 <effect type="fade" start="0" end="100" time="300" tween="sine" easing="in"  />
                 <effect type="slide" start="0,-75" end="0,0" time="350" tween="cubic" easing="out" />
@@ -13,6 +13,7 @@
                 <effect type="slide" end="0,-75" time="700" delay="300" />
             </animation>
             <animation effect="slide" end="-76" time="300" tween="sine" easing="inout" condition="Window.IsActive(busydialog)">Conditional</animation>
+            <visible>!Window.IsActive(fullscreenvideo) + !Window.IsActive(visualisation)</visible>
             <control type="group">
                 <control type="image">
                     <posx>-4</posx>
@@ -21,18 +22,10 @@
                     <height>100</height>
                     <texture>overlays/volume/volume-back.png</texture>
                 </control>
-				<control type="image">
-						<posx>-195</posx>
-						<posy>-20</posy>
-						<width>340</width>
-						<height>194</height>
-						<texture border="150,90,150,90">overlays/volume/back-vf.png</texture>
-						<aspectratio>stretch</aspectratio>
-					</control>
                 <control type="group">
                     <visible>!Player.Passthrough</visible>
                     <control type="progress" id="20">
-                         <visible condition="!Window.IsActive(fullscreenvideo) + !Window.IsActive(visualisation)">false</visible>
+                        <visible>false</visible>
                         <info>Player.Volume</info>
                     </control>
                     <control type="image">
@@ -80,6 +73,72 @@
                 </control>
             </control>
         </control>
-	</controls>
-
+        <control type="group">  
+            <animation type="WindowOpen">
+                <effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" />
+                <effect type="slide" start="50" end="0" time="300" tween="sine" easing="inout" />
+            </animation>
+            <animation type="WindowClose">
+                <effect type="fade" start="100" end="0" time="200" tween="sine" easing="inout" />
+                <effect type="slide" start="0" end="50" time="200" tween="sine" easing="inout" />
+            </animation>
+            <animation effect="slide" end="-100" time="300" tween="sine" easing="inout" condition="Player.Muted | substring(Player.Volume,-60.0)">Conditional</animation>
+            <animation effect="slide" start="0,0" end="0,886" time="400" tween="sine" easing="inout" condition="Skin.HasSetting(VideoOSD.OnTop)">Conditional</animation>
+            <visible>Window.IsActive(fullscreenvideo) | Window.IsActive(visualisation)</visible>
+            <control type="group">
+                <visible>!Player.Passthrough</visible>
+                <control type="image">
+                    <posx>1570</posx>
+                    <posy>0</posy>
+                    <width>305</width>
+                    <height>194</height>
+                    <texture>overlays/volume/back-vf.png</texture>
+                    <aspectratio>stretch</aspectratio>
+                </control>
+                <control type="label">
+                    <description>Volume label</description>
+                    <posx>1742</posx>
+                    <posy>79</posy>
+                    <width>150</width>
+                    <height>34</height>
+                    <label>$INFO[Player.Volume]</label>
+                    <font>Font-Condensed-S34</font>
+                    <textcolor>aawhite</textcolor>
+                    <align>right</align>
+                    <scroll>No</scroll>
+                </control>
+            </control>
+            <control type="group">
+                <visible>Player.Passthrough</visible>
+                <control type="image">
+                    <posx>1320</posx>
+                    <posy>0</posy>
+                    <width>555</width>
+                    <height>194</height>
+                    <texture border="150,90,150,90">overlays/volume/back-vf.png</texture>
+                    <aspectratio>stretch</aspectratio>
+                </control>
+                <control type="label">
+                    <description>Volume label</description>
+                    <posx>1742</posx>
+                    <posy>79</posy>
+                    <width>345</width>
+                    <height>34</height>
+                    <label>$LOCALIZE[29802]</label>
+                    <font>Font-Condensed-S34</font>
+                    <textcolor>aawhite</textcolor>
+                    <align>right</align>
+                    <scroll>No</scroll>
+                </control>
+            </control>
+            <control type="image">
+                <description>Volume image</description>
+                <posx>1730</posx>
+                <posy>47</posy>
+                <width>100</width>
+                <height>100</height>
+                <texture>overlays/volume/volume-vf.png</texture>
+            </control>
+        </control>
+    </controls>
 </window>
